# rusty-snake

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs  snake.rs
